[package]
name = "arctos-can-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.3", features = ["derive", "env"] }
futures = "0.3.28"
futures-util = "0.3.28"
num-derive = "0.4.0"
num-traits = "0.2.16"
socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs.git", features = ["tokio"] }
tokio = { version = "1.32.0", features = ["io-std", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.8"
